# mdns-rs

./: Cargo.toml  Makefile  README.md
.github/workflows/: cargo.yml
src/: client.rs  client_test.rs  default.rs  discoverer.rs  error.rs  lib.rs  message.rs  message_test.rs  query.rs  service.rs
src/dns/: a_record.rs  aaaa_record.rs  class.rs  error.rs  message.rs  message_test.rs  mod.rs  nsec_record.rs  ptr_record.rs  question_record.rs  reader.rs  reader_test.rs  record.rs  records.rs  resource_record.rs  resource_records.rs  srv_record.rs  txt_record.rs  typ.rs  writer.rs
