[package]
name = "mdns"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
# cybergarage = { git = "https://github.com/cybergarage/cybergarage-rs.git" }
# cybergarage = { path = "../cybergarage-rs/cybergarage" }
cybergarage = "1.1.4"

[[bin]]
name = "mdns-browse"
path = "bin/mdns-browse/mdns-browse.rs"
